# CloudSellTestovoe

./: README.md  pyproject.toml
app/: api.py  clients.py  config.py  models.py  storage.py  tasks.py
data/: provider_a.json  provider_b.json
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.app.yaml  docker-compose.redis.yaml
tests/: run_integration_tests.bat  run_integration_tests.sh  test_integration.py
