[project]
name = "cloudselltestovoe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "orjson>=3.10.18",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
tests = [
    "fakeredis>=2.30.1",
    "httpx>=0.28.1",
    "pytest==8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "twisted>=25.5.0",
]
