[project]
name = "cloudselltestovoe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "orjson>=3.10.18",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
tests = [
    "fakeredis>=2.30.1",
    "pytest==8.4.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0"
]